...
              >
                {createRuleMutation.isPending || updateRuleMutation.isPending
                  ? editingRuleId
                    ? 'Saving...'
                    : 'Creating...'
                  : editingRuleId
                    ? 'Save changes'
                    : 'Create rule'}
              </Button>
            </DialogFooter>
          </DialogContent>
        </Dialog>

...
