...
          tabBarIcon: ({ color, size }) => <Ionicons color={color} name="pulse-outline" size={size} />,
        }}
      />
      <Tabs.Screen
        name="more"
        options={{
          title: 'More',
          tabBarIcon: ({ color, size }) => <Ionicons color={color} name="ellipsis-horizontal" size={size} />,
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
...
